fix: adjusts spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,26 +10,28 @@ html,
 body,
 #root {
   height: 100%;
-  width: 100%;
 }
 
 body {
-  display: block;
   background-color: #0079bf;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 .App {
+  flex: 1;
   box-sizing: border-box;
   display: flex;
   flex-wrap: nowrap;
   align-items: flex-start;
   justify-content: flex-start;
-  height: 100%;
-  gap: 12px;
   padding: 12px;
+  margin-bottom: 12px;
   overflow-y: hidden;
   overflow-x: auto;
-  min-width: 100%;
 }
 
 /* width */
@@ -55,7 +57,13 @@ body {
 .list {
   display: flex;
   flex-wrap: nowrap;
-  gap: 12px;
   align-items: flex-start;
   height: 100%;
+}
+
+.header {
+  height: 40px;
+  width: 100%;
+  background-color: #0567a3;
+  margin-bottom: 12px;
 }
